--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.27.0",
+    "@google/generative-ai": "^0.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
